<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/communicate">

        <menu>
            <item
                android:id="@+id/nav_tellafrnd"
                android:icon="@drawable/ic_share"
                android:iconTint="@color/darkpurple"
                android:title="@string/tell_a_friend" />
            <item
                android:id="@+id/nav_contact"
                android:iconTint="@color/tabIndicatorColor"
                android:icon="@drawable/ic_outline_perm_contact_calendar_24"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_about"
                app:showAsAction="never"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_rate_us"
                app:showAsAction="never"
                android:icon="@drawable/ic_baseline_star_24"
                android:title="@string/rate_us" />

        </menu>

    </item>

<!--    <item android:title="Coming Soon">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_live"-->
<!--                android:icon="@drawable/ic_baseline_live_tv_24"-->
<!--                android:iconTint="@color/red"-->
<!--                android:title="@string/live"/>-->
<!--        </menu>-->
<!--    </item>-->

    <item android:title="@string/account">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/log_out" />
        </menu>

    </item>

</menu>