<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:ignore="NamespaceTypo">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/login2"
        android:layout_gravity="bottom"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="-40dp" />

    <ImageView
        android:id="@+id/dhaki_png"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="top|right"
        android:layout_marginEnd="-50dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/harabara"
                android:paddingHorizontal="50dp"
                android:paddingVertical="80dp"
                android:text="@string/utsav"
                android:textColor="#171E30"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_regular"
                android:paddingBottom="20dp"
                android:text="@string/login"
                android:paddingHorizontal="50dp"
                android:textColor="#171E30"
                android:textSize="25dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/background_rectangle"
                    android:ems="10"
                    android:fontFamily="@font/oxygen_regular"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="18dp"
                    android:paddingEnd="10dp"
                    android:textColor="#716A6A"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/background_rectangle"
                    android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
                    android:ems="10"
                    android:fontFamily="@font/oxygen_regular"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="18dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oxygen_regular"
                    android:textSize="12sp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/forgot_password"
                    android:textColor="#605F5F"
                    android:layout_gravity="end"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/oxygen_ex_bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/login"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/signup"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/oxygen_regular"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#171e30"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/account_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_regular"
                        android:padding="5dp"
                        android:text="@string/don_t_have_an_account_yet"
                        android:textColor="#323232" />

                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_bold"
                        android:padding="5dp"
                        android:text="@string/sign_up"
                        android:textColor="#171E30"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_bold"
                        android:padding="5dp"
                        android:text="@string/login"
                        android:textColor="#171E30"
                        android:textSize="18sp"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/or"
                    android:fontFamily="@font/oxygen_regular"
                    android:textColor="#212121" />

            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signin_google"
                android:layout_width="159dp"
                android:layout_height="54dp" />

            <TextView
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:textAlignment="center"
                android:fontFamily="@font/oxygen_regular"
                android:layout_marginTop="80dp"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:textColor="#7C212121" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:fontFamily="@font/oxygen_regular"
                    android:text="@string/privacy"
                    android:textColor="#7C212121"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/cookies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:gravity="center"
                    android:fontFamily="@font/oxygen_regular"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/and_cookies"
                    android:textColor="#7C212121" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressAnim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#55212121"
        android:padding="100dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="13532-loading-animation.json"
        app:lottie_loop="true" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>