<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:paddingHorizontal="15dp"
    android:background="@drawable/shape"
    android:orientation="vertical"
    android:gravity="start|center_vertical">

    <LinearLayout
        android:id="@+id/edit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/custom_ripple_white_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_outline_edit_24"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_post"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/custom_ripple_white_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_outline_share_24"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_post"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_outline_report_24"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_post"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_post"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>