<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar12"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_background"
        android:elevation="5dp"
        app:layout_collapseMode="pin"
        app:title="@string/Edit_comment"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="25dp">

        <ImageView
            android:id="@+id/user_image_comment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/background_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:minLines="2"
            android:fontFamily="@font/oxygen_regular"
            android:autoLink="all"
            android:textColorLink="@color/colorPrimary"
            android:background="@null"
            android:hint="@string/type_something_n"
            android:textColor="@color/black"
            android:paddingHorizontal="8dp"/>

        <com.applex.utsav.LinkPreview.ApplexLinkPreviewShort
            android:id="@+id/LinkPreViewComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/custom_button"
        android:textColor="@color/reels_white"
        android:layout_margin="5dp"
        android:layout_gravity="center"/>

</LinearLayout>